kustomize/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novdan-api
  labels:
    app: novdan-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: novdan-api
  template:
    metadata:
      labels:
        app: novdan-api
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: novdan-storage
          emptyDir: {}
      containers:
        - name: novdan-api
          image: novdan-api
          volumeMounts:
            - name: novdan-storage
              mountPath: /storage
          command:
            - gunicorn
            - novdan_api.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "30"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 500Mi
              cpu: 500m
            limits:
              memory: 500Mi
              cpu: 500m
        - name: novdan-nginx
          image: nginx:alpine
          volumeMounts:
            - name: novdan-storage
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 100Mi
              cpu: 100m
