kustomize/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novdan-api
spec:
  selector:
    app: novdan-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: novdan-nginx
spec:
  selector:
    app: novdan-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
