kustomize/api/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://novdan.si"
      - "https://denarnica.novdan.si"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novdan-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - denarnica.novdan.si
      secretName: novdan-api-tls
  rules:
    - host: denarnica.novdan.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: novdan-api
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novdan-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      novdan-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.novdan.si
      secretName: novdan-nginx-tls
  rules:
    - host: files.novdan.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: novdan-nginx
                port:
                  number: 80
